2011-03-28 Fred Kiefer <FredKiefer@gmx.de>

	* Tests/gui/NSSavePanel/setDelegate_reload.m: Switch the save
	panel to show hidden files as this is no longer the default.
	* Tests/gui/NSCell/basic.m: Basic create, coding and copy tests
	copied from base.

2011-03-28 Riccardo Mottola <rm@gnu.org>

	* Source/NSSearchFieldCell.m,
	* Source/NSTextView.m:
	Remove c99-ism

	* Source/NSSpeechSynthesizer.m:
	Add missing import

2011-03-25 German Arias <german@xelalug.org>

	* Panels/Spanish.lproj/GSDataLinkPanel.gorm:
	* Panels/Spanish.lproj/GSPageLayout.gorm:
	* Panels/Spanish.lproj/GSToolbarCustomizationPalette.gorm:
	* Panels/Spanish.lproj/GSPrintPanel.gorm:
	* Panels/Spanish.lproj/GSFindPanel.gorm: Tweak size of some
	elements for improve the presentation.

2011-03-19  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSPrintPanel.m:
	* Panels/Spanish.lproj/GSPrintPanel.gorm:
	* Panels/English.lproj/GSPrintPanel.gorm: Tweak the print panel to
	allow the user to choose the printer

2011-03-18  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/GNUmakefile (DOCUMENT_TEXT_NAME, TOP_DOC_FILES):
	Fixed names of files to generate; for example, INSTALL instead of
	install.

2011-03-17  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m (-_trackWithEvent:): Use _trackWithEvent:
	instead of trackWithEvent: to have just one mouse capture call.

2011-03-17  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSOutlineView.m (-namesOfPromisedFilesDroppedAtDestination:),
	* Source/NSTableView.m
	(-namesOfPromisedFilesDroppedAtDestination:): Implement this drag
	and drop support method.

2011-03-16  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSComboBoxCell.m: Correct imports.

2011-03-16  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSOutlineView.m (-_didChangeSortDescriptors:),
	* Source/NSTableView.m (-_didChangeSortDescriptors:): Send the
	message to the data source not the delegate.

2011-03-16 06:30-EDT Gregory John Casamento <greg.casamento@gmail.com>
